@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2021 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,17 +22,15 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.fanout.fanin;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 /**
- * FanOutFanIn class processes long running requests, when any of the processes gets over, result is
+ * FanOutFanIn class processes long-running requests, when any of the processes gets over, result is
  * passed over to the consumer or the callback function. Consumer will aggregate the results as they
  * keep on completing.
  */
@@ -38,6 +38,7 @@ public class FanOutFanIn {
 
   /**
    * the main fanOutFanIn function or orchestrator function.
+   *
    * @param requests List of numbers that need to be squared and summed up
    * @param consumer Takes in the squared number from {@link SquareNumberRequest} and sums it up
    * @return Aggregated sum of all squared numbers.
@@ -53,7 +54,7 @@ public class FanOutFanIn {
             .map(
                 request ->
                     CompletableFuture.runAsync(() -> request.delayedSquaring(consumer), service))
-            .collect(Collectors.toList());
+            .toList();
 
     CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
 
